# CodeforcesParser

./: .env.example  README.md  black.py  main.py  pyproject.toml  services.py  utils.py
bot/: bot.py
db/: database.py  meta.py
tests/: conftest.py  test_bot.py  test_db.py  test_services.py
tg_bot/: keyboard.py  state.py  utils.py
